Added common task section